:fire: chore(sage): refactoring the file structures

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,8 +74,8 @@ macro(source_group_by_dir source_files)
   endforeach()
 endmacro()
 
-file(GLOB_RECURSE SAGE_HEADERS *.h *.hh)
-file(GLOB_RECURSE SAGE_SOURCES *.cc)
+file(GLOB_RECURSE SAGE_HEADERS sage/*.hh)
+file(GLOB_RECURSE SAGE_SOURCES sage/*.cc)
 if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
   set(SAGE_ALL_FILES ${SAGE_HEADERS} ${SAGE_SOURCES})
   source_group_by_dir(SAGE_ALL_FILES)
